# static-lib-builder

./: .gitignore  README.md
.github/workflows/: ffmpeg.yml  libavif.yml  v8.yml
docs/: adding-a-new-library.md
ffmpeg/: config.env
ffmpeg/scripts/: build_unix.sh  build_windows.ps1  build_windows_msvc.sh  configure_minimal.sh  package.sh
libavif/: config.env
libavif/cross/meson/: README.md
libavif/scripts/: build_unix.sh  build_windows.ps1  package.sh
scripts/: common.sh
v8/: config.env
v8/gn_args/: android-arm64-v8a.gn  linux-x86_64.gn  macos-arm64.gn  macos-x86_64.gn  windows-x64-msvc.gn
v8/patches/: 14.9.207.29-fix-msvc-no-pointer-compression.patch
v8/scripts/: build_unix.sh  build_windows.ps1  collect_libcxx.sh  detect_arch.py  disable_thin_archive.py  fetch.sh  package.sh
