# V8 GN 平台基础参数: Linux x86_64 (native)
# 可调参数与固定参数由 v8/scripts/build_unix.sh 依据 config.env 追加。
# 链入动态库: config.env V8_MONOLITHIC_FOR_SHARED_LIBRARY -> v8_monolithic_for_shared_library。
target_os = "linux"
target_cpu = "x64"
v8_target_cpu = "x64"

# --- sysroot 与 STL (Chromium 自带 libc++ / std::__Cr) -------------------------
#
# 不用 Chromium 自带 debian sysroot，改在 CI 宿主机上编译；STL 改用树内
# libc++ (use_custom_libcxx=true)。下游必须用本包附带的 libcxx 头文件与同一
# ABI (std::__Cr)，不可再混链系统 libstdc++ / 系统 libc++。
#
# 代价：产物仍可能依赖较新 glibc (ubuntu 22.04/24.04 级别)。
use_sysroot = false
use_custom_libcxx = true
