# V8 GN 平台基础参数: macOS Apple Silicon (arm64)
# 可调参数 (is_debug / symbol_level / i18n / wasm / pointer_compression 等)
# 与固定参数 (v8_monolithic 等) 由 v8/scripts/build_unix.sh 依据 config.env 追加。
target_os = "mac"
target_cpu = "arm64"
v8_target_cpu = "arm64"

# --- STL 与分配器 (Chromium 自带 libc++ / std::__Cr) ---------------------------
#
# 使用 Chromium 自带 libc++，V8 公开 API 中的 std:: 类型编成 std::__Cr::。
# 下游必须用本包附带的 libcxx/include（含 __config_site）编译并链接同一 ABI。
#
# 关闭 allocator shim + PA-as-malloc：独立 embedder 不需要 Chrome 的
# PartitionAlloc-as-malloc，避免替换全局 operator new/delete。
use_allocator_shim = false
use_partition_alloc_as_malloc = false
use_custom_libcxx = true
