# V8 GN 平台基础参数: macOS Intel (x86_64)
# 可调参数 (is_debug / symbol_level / i18n / wasm / pointer_compression 等)
# 与固定参数 (v8_monolithic 等) 由 v8/scripts/build_unix.sh 依据 config.env 追加。
target_os = "mac"
target_cpu = "x64"
v8_target_cpu = "x64"

# --- STL 与分配器 (与下游系统 libc++ 对齐，原因同 macos-arm64.gn) ------------
#
# 关闭 allocator shim + PA-as-malloc，避免 force-hidden new/delete 与 SDK libc++ 冲突；
# 使用系统 libc++ (std::__1)，使下游链接 V8 公开 API 时 mangling 一致。
use_allocator_shim = false
use_partition_alloc_as_malloc = false
use_custom_libcxx = false
