# V8 GN 平台基础参数: macOS Intel (x86_64)
# 可调参数 (is_debug / symbol_level / i18n / wasm / pointer_compression 等)
# 与固定参数 (v8_monolithic 等) 由 v8/scripts/build_unix.sh 依据 config.env 追加。
target_os = "mac"
target_cpu = "x64"
v8_target_cpu = "x64"

# --- STL 与分配器 (Chromium 自带 libc++ / std::__Cr，原因同 macos-arm64.gn) ----
use_allocator_shim = false
use_partition_alloc_as_malloc = false
use_custom_libcxx = true
